Fix overlapping nodes in dendrogram views.

--- a/resources/css/tInfo.css
+++ b/resources/css/tInfo.css
@@ -142,7 +142,7 @@
 }
 #ttextdiv {
     width: 600px;
-    height: 150px;
+    height: 200px;
     font-family: monospace;
     white-space: pre;
     overflow: hidden;
